@@ -52,6 +52,7 @@ struct _GimpGradientEditor
 {
   GimpDataEditor  parent_instance;
 
+  GtkWidget      *current_color;
   GtkWidget      *hint_label1;
   GtkWidget      *hint_label2;
   GtkWidget      *hint_label3;
