@@ -1,3 +1,10 @@
+2007-02-07  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpgradienteditor.[ch]: applied patch from Joao
+	S. O. Bueno Calligaris which adds a preview for the color the
+	cursor is currently hovering and reduces excess precision when
+	displaying color components and gradient positions (bug #400907).
+
 2007-02-07  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell-scale.c: don't compare floating
